Make all layout panes class dojoLayoutPane.  Also, set overflow: hide by default (for now) because of sizing issues that cause a scrollbar to be needlessly displayed
git-svn-id: http://svn.dojotoolkit.org/src/trunk@2094 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/src/widget/templates/HtmlLayoutPane.css
+++ b/src/widget/templates/HtmlLayoutPane.css
@@ -1,9 +1,3 @@
-/* pane not inside another pane */
-.dojoLayoutPaneParent {
-	overflow: auto;
-}
-
-/* pane inside another pane */
-.dojoLayoutPaneChild {
-	overflow: auto;
+.dojoLayoutPane {
+	overflow: hide;
 }
